--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header{
 	position:fixed;
 	z-index: 3;
 	justify-content: center;
-	height: 84px;
+	height: 54px;
 	background: linear-gradient(
 		120deg,
 		rgb(72, 194, 255), rgb(0, 145, 255)
@@ -131,7 +131,7 @@ header{
 .home-countner{
 	padding: 30px;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	flex-direction: column;
 	align-items: center;
 	width: 85%;
@@ -213,11 +213,12 @@ header{
 .web{
 	margin-top: 40px;
 	display: flex;
+	justify-content: center;
 	flex-direction: column;
 	position: absolute;
 	z-index: 2;
-	width: 180px;
-	height: 5400px;
+	width: 120px;
+	height: 5200px;
 	background: linear-gradient(
 		190deg,
 		rgb(1, 76, 198), rgb(130, 188, 255)
@@ -225,12 +226,13 @@ header{
 }
 
 .web img{
-	margin-top: 200px;
+	margin-top: -1000px;
+	margin-bottom: 100px;
 	margin-left: 10px;
     border-radius: 50%;
-	border: 5px solid rgb(106, 106, 106);
-	width: 150px;
-	height: 150px;
+	border: 3px solid rgb(106, 106, 106);
+	width: 100px;
+	height: 100px;
 }
 
 #log-two{
@@ -238,74 +240,49 @@ header{
 }
 
 .web h1{
-	font-size: 80px;
-	margin: 40px 0px 0px 60px;
+	font-size: 40px;
+	margin: 40px 0px 0px 40px;
 	color: white;
+}
+
+.answer h1{
+	font-size: 22px;
+	padding: 10px 13px 10px 25px;
+    background-color: #ececec;
+	color: #00a2ff;
+	border-radius: 50px 50px 0px 50px;
+	box-shadow: 2px 2px 20px 2px rgba(0, 0, 0, 0.2);
+	margin-bottom: 35px;
+}	
+.answer h2{
+	font-size: 20px;
+}
+.answer h3{
+	font-size: 18px;
+	color: #333;
 }
 
 .web h2{
 	margin-top: 580px;
-	font-size: 40px;
+	font-size: 30px;
 	rotate: -90deg;
 	margin-left: 10px;
 }
 
-.one-answer h1{
-	padding: 10px 13px 10px 25px;
-    background-color: #ececec;
-	color: #00a2ff;
-	border-radius: 50px 50px 0px 50px;
-	box-shadow: 2px 2px 20px 2px rgba(0, 0, 0, 0.2);
-	margin-bottom: 35px;
-}
-
-.two-answer h1{
-	padding: 10px 13px 10px 25px;
-    background-color: #ececec;
-	color: #00a2ff;
-	border-radius: 50px 50px 0px 50px;
-	margin-bottom: 35px;
-	box-shadow: 2px 2px 20px 2px rgba(0, 0, 0, 0.2);
-}
-
-.three-answer h1{
-	padding: 10px 13px 10px 25px;
-    background-color: #ececec;
-	color: #00a2ff;
-	border-radius: 50px 50px 0px 50px;
-	margin-bottom: 35px;
-	box-shadow: 2px 2px 20px 2px rgba(0, 0, 0, 0.2);
-}
-
-.four-answer h1{
-	padding: 10px 13px 10px 25px;
-    background-color: #ececec;
-	color: #00a2ff;
-	border-radius: 50px 50px 0px 50px;
-	margin-bottom: 35px;
-	box-shadow: 2px 2px 20px 2px rgba(0, 0, 0, 0.2);
-}
-
-.five-answer h1{
-	padding: 10px 13px 10px 25px;
-    background-color: #ececec;
-	color: #00a2ff;
-	border-radius: 50px 50px 0px 50px;
-	margin-bottom: 35px;
-	box-shadow: 2px 2px 20px 2px rgba(0, 0, 0, 0.2);
+.answer{
+	margin: 40px 0px 50px 120px;
 }
 
 .one-answer{
 	display: flex;
 	flex-direction: column;
-	margin: 40px 0px 50px 180px;
 	padding: 35px;
 	font-size: larger;	
 	height: auto;
 	box-shadow: 10px 0px 40px 10px rgba(0, 0, 0, 0.1);
 }
 
-.one-answer h4{
+.answer h4{
 	font-size: 25px;
 	font-weight: 900; 
 }
@@ -313,52 +290,33 @@ header{
 .two-answer{
 	display: flex;
 	flex-direction: column;
-	margin: 40px 0px 50px 180px;
 	padding: 35px;
 	font-size: larger;	
 	height: auto;
 	box-shadow: 10px 0px 40px 10px rgba(0, 0, 0, 0.1);
-}
-
-.two-answer h4{
-	font-size: 25px;
-	font-weight: 900; 
 }
 
 .three-answer{
 	display: flex;
 	flex-direction: column;
-	margin: 40px 0px 50px 180px;
 	padding: 35px;
 	font-size: larger;	
 	height: auto;
 	box-shadow: 10px 0px 40px 10px rgba(0, 0, 0, 0.1);
-}
-
-.three-answer h4{
-	font-size: 25px;
-	font-weight: 900; 
 }
 
 .four-answer{
 	display: flex;
 	flex-direction: column;
-	margin: 40px 0px 50px 180px;
 	padding: 35px;
 	font-size: larger;	
 	height: auto;
 	box-shadow: 10px 0px 40px 10px rgba(0, 0, 0, 0.1);
 }
 
-.four-answer h4{
-	font-size: 25px;
-	font-weight: 900; 
-}
-
 .five-answer{
 	display: flex;
-	flex-direction: column;
-	margin: 40px 0px 50px 180px;
+	flex-direction: column;	
 	padding: 35px;
 	font-size: larger;
 	height: auto;
@@ -367,10 +325,6 @@ header{
 
 .five-answer img{
 	width: 100%;
-}
-.five-answer h4{
-	font-size: 25px;
-	font-weight: 900; 
 }
 
 .main {
@@ -442,23 +396,6 @@ header{
   a.button:hover {
 	color: #fff;
 	background-color: #00a2ff;
-  }
-
-  .other-countaner{
-	display: flex;
-	justify-content: center;
-	margin-bottom: 80px;
-  }
-  
-  .other-subject li{
-	list-style: disc;
-	font-size: 30px;
-	color: #6e6e6e;
-  }
-
-  .other-subject h1{
-	text-decoration: 3px underline rgb(18, 117, 255);
-    margin-bottom: 20px;
   }
 
   .other-subject a{
@@ -652,6 +589,7 @@ footer{
 .footer li a{   
     color: #333;
     text-decoration: none;
+	text-transform: capitalize;
     font-size: 20px;
     font-weight: 900;
     font-family: Verdana;
@@ -694,7 +632,6 @@ footer{
 	.nav-btn {
 	  visibility: hidden;
 	}
-  
 	.swiper-pagination-bullet {
 	  visibility: visible;
 	}
@@ -702,8 +639,8 @@ footer{
       display: none;
 	}
 	.footer li a{
-		font-size: 15px;
-		margin: 10px 0px 15px 0px;
+		font-size: 18px;
+		margin: 10px 0px 25px 0px;
 	}
 	.footer i{
 		font-size: 25px;
@@ -722,7 +659,7 @@ footer{
 	#myButton{
 		display: block;
 	}
-
+    
 	.nav-countand{
 		display: none;
 	}
@@ -741,21 +678,9 @@ footer{
 	.web{
 		display: none;
 	}
-	.one-answer{
+	.answer{
 		margin-left: 0px;
-	}
-	.two-answer{
-		margin-left: 0px;
-	}
-	.three-answer{
-		margin-left: 0px;
-	}
-	.four-answer{
-		margin-left: 0px;
-	}
-	.five-answer{
-		margin-left: 0px;
-	}
+	}	
 }
 
 @media (max-width: 550px) {
